[gd_scene load_steps=5 format=3 uid="uid://cka42o7mverlo"]

[ext_resource type="Script" path="res://ui.gd" id="1_1minq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5e0q7"]
bg_color = Color(0.211765, 0.207843, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb22o"]
bg_color = Color(1, 0.745098, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk8bo"]
bg_color = Color(0.321569, 0.321569, 0.321569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1minq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.294118)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer2/MarginContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="MarginContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "  ≡  "

[node name="BankAmount" type="Label" parent="MarginContainer/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "$500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/PanelContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level 0 (11XP / 20XP)"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/PanelContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_5e0q7")
theme_override_styles/fill = SubResource("StyleBoxFlat_bb22o")
min_value = 1.0
max_value = 20.0
value = 11.0
show_percentage = false

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.333333)
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_tk8bo")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="TileItemsList" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BuildToolBox" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BuildToolBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BuildToolBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Left" type="Button" parent="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = " ◀️  "

[node name="Close" type="Button" parent="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = " ✕ "

[node name="Right" type="Button" parent="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "  ▶️ "

[connection signal="pressed" from="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/BuildToolBox/MarginContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
